--- a/dealer.html
+++ b/dealer.html
@@ -21,6 +21,15 @@
             scroll-behavior: smooth;
         }
 
+        #banner {
+            background-image: url(.//images/Ohlins-5.jpg);
+            height: 400px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+            margin-top: 3.5rem;
+        }
+
         .content {
             margin-top: 3rem;
         }
@@ -310,21 +319,15 @@
         </div>
     </div>
 
-
     <footer class="text-center bg-dark text-white py-2">
+        <a href="#"><img src="./images/line (2).png" alt=""></a>
+        <a href="#"><img src="./images/facebook (1).png" alt=""></a>
+        <a href="#"><img src="./images/instagram.png" alt=""></a>
+        <br>
         © 2021 All Rights Reserved.
     </footer>
 
-    <style>
-        #banner {
-            background-image: url(.//images/Ohlins-5.jpg);
-            height: 400px;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-            margin-top: 3.5rem;
-        }
-    </style>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
