--- a/detail0.html
+++ b/detail0.html
@@ -75,36 +75,34 @@
                     <img src="./images/STX46_DU505_4-380x240.jpg" alt="">
                 </div>
                 <div class="col-6">
-                    <img class="img-fluid " src="./images/KitsumaCoil.45.Vert_.Transparent.png" alt="">
+                    <img class="img-fluid " src="./images/22222.png" alt="">
                 </div>
                 <div class="col-4">
-                    <h2 class="display-6 text-center mt-5">TTX-45 | 技術規格 </h2>
+                    <h2 class="display-6 text-center mt-5">SR-62 | 技術規格 </h2>
                     <p class="fs-3">重量</p>
-                    <p class="">468g(210x55 mm。標準安裝 - 無彈簧）</p>
+                    <p class="">368g(無彈簧）</p>
 
                     <p class="fs-3">阻尼</p>
-                    <p class="">新增加的阻尼範圍。兩個高速和兩個低速阻尼迴路中的雙管獨立壓縮和回彈。優質 Motorex 4wt 阻尼油</p>
+                    <p class="">兩個高速和兩個低速阻尼迴路中的雙管獨立壓縮和回彈。優質 Motorex 4wt 阻尼油新增加的阻尼範圍。</p>
 
                     <p class="fs-3">調整</p>
                     <p class="">
                         免工具4路獨立調節
-                        高速壓縮
-                        低速壓縮
-                        高速回彈
                         低速回彈
+                        高速壓縮
+                        高速回彈
+                        低速壓縮
                     </p>
 
                     <p class="fs-3">快速開關</p>
-                    <p class="">3檔位開關 下坡 爬坡 碎石</p>
+                    <p class="">3檔位開關 爬坡 碎石 下坡</p>
 
                     <p class="fs-3">軸徑</p>
-                    <p class="">9.5mm 鉻鉬軸低摩擦塗層</p>
+                    <p class="">7.5mm 低摩擦塗層鉻鉬軸</p>
 
                     <p class="fs-3">安裝種類</p>
-                    <p class="">標準安裝及耳軸式</p>
+                    <p class="">標準安裝</p>
 
-                    <p class="fs-3">彈簧選擇</p>
-                    <p class="">線性及漸進式彈簧</p>
                 </div>
             </div>
             <div class="row ">
