--- a/product.html
+++ b/product.html
@@ -22,12 +22,13 @@
         }
 
         #banner {
-            background-image: url(.//images/Ohlins-5.jpg);
+            background-image: url(./images/51689316987_7fd0b876d7_o.jpg);
             height: 400px;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
             margin-top: 3.5rem;
+            /* background-position: 0px -250px; */
         }
 
         #card1,
@@ -83,7 +84,7 @@
     <div class="container my-2">
         <h3 class="text-danger fw-bold">產品介紹</h3>
         <hr>
-        <h3 class="text-center m-4">線圈彈簧 | Coil</h3>
+        <h3 class="mt-4 mb-4">線圈彈簧 | Coil</h3>
         <div class="row">
             <div class="col-lg mb-3">
                 <div class="card" id="card1">
@@ -131,7 +132,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title text-danger">摩托車 TTX</h5>
-                        <p class="card-text">降低筒身內部與活塞間的摩擦係數，最後在表面再施以陽極硬化處理防止氧化</p>
+                        <p class="card-text">降低筒身內部與活塞間的摩擦係數，最後在表面再施以陽極硬化處理防止氧化增加表面硬度</p>
                         <a href="#" class="btn btn-outline-primary float-end">詳細資訊</a>
                     </div>
                 </div>
@@ -162,7 +163,7 @@
             </div>
         </div>
         <hr>
-        <h3 class="text-center m-4" data-aos="fade-up">空氣彈簧 | Air</h3>
+        <h3 class="mt-4 mb-4" data-aos="fade-up">空氣彈簧 | Air</h3>
         <hr>
         <div class="row" data-aos="fade-up">
             <div class="col-lg mb-3">
@@ -211,7 +212,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title text-danger">摩托車 TTX</h5>
-                        <p class="card-text">降低筒身內部與活塞間的摩擦係數，最後在表面再施以陽極硬化處理防止氧化</p>
+                        <p class="card-text">降低筒身內部與活塞間的摩擦係數，最後在表面再施以陽極硬化處理防止氧化增加表面硬度</p>
                         <a href="#" class="btn btn-outline-primary float-end">詳細資訊</a>
                     </div>
                 </div>
